--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
     "name": "Study Timer Dock",
     "package": "anki_timer",
+    "mod": 1700000000,
     "min_point_version": 50,
     "max_point_version": 99,
     "human_version": "1.0.0"
